# uno-game

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
src/client/: PlayerAction.cpp  PlayerAction.h  UnoClient.cpp  UnoClient.h  main.cpp
src/common/: Utils.cpp  utils.cpp  utils.h
src/game/: Card.cpp  Card.h  CardTile.cpp  CardTile.h  GameState.cpp  GameState.h  Player.cpp  Player.h
src/network/: Message.cpp  Message.h  MessageSerializer.cpp  MessageSerializer.h  NetworkClient.cpp  NetworkClient.h  NetworkServer.cpp  NetworkServer.h  Session.cpp  Session.h
src/server/: UnoServer.cpp  UnoServer.h  main.cpp
src/ui/: ConnectPage.slint  GameUI.cpp  GameUI.h  MainWindow.slint  StartPage.slint
test/: CMakeLists.txt
test/unit/game/: CardTest.cpp  CardTileTest.cpp  GameStateTest.cpp  PlayerTest.cpp
test/unit/network/: MessageSerializerTest.cpp  NetworkClientTest.cpp  NetworkServerTest.cpp
ui/: Components.slint  ConnectPage.slint  GamePage.slint  MainWindow.slint  StartPage.slint
